tests/Rules/Aria/Fixtures/valid/role_valid.html.twig
<div role="navigation">Menu</div>
