tests/Rules/Aria/Fixtures/invalid/required_attr_missing.html.twig
{# 1 errors #}
<div role="img"></div>
